# le_chad

./: .env.example  .gitignore  README.md  discoveries.md  product_context.md  pyproject.toml
agent/: guardrail.py  improve.py
app/: main.py  webhook.py
dashboard/: index.html  package-lock.json  vite.config.js
dashboard/src/: App.jsx  index.css
feature-builder/: pyproject.toml
feature-builder/feature_builder/: __init__.py  api.py  cli.py  context.py  git_ops.py  hn.py  implementer.py  llm.py  logger.py  pipeline.py  planner.py  scout.py  twitter.py
feature-builder/scripts/: feasibility.py
le_chad/: README.md  pyproject.toml
le_chad/le_chad/: app.py  cli.py  config.py  db.py  models.py
le_chad/src/: db.py
le_chad/src/le_chad/: db.py  models.py
le_chad/src/le_chad/api/routes/: tasks.py
