[project]
name = "chadbot"
version = "0.1.0"
description = "Multi-agent software factory that reactively fixes and proactively improves your product codebase"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "le-chad",
    "feature-builder",
]

[tool.uv.workspace]
members = ["feature-builder", "le_chad"]

[tool.uv.sources]
feature-builder = { workspace = true }
le-chad = { workspace = true }
