[project]
name = "chadbot"
version = "0.1.0"
description = "Multi-agent software factory that reactively fixes and proactively improves your product codebase"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "feature-builder",
    "httpx>=0.28.1",
    "le-chad",
    "mistralai>=1.0.0",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["feature-builder", "le_chad"]

[tool.uv.sources]
feature-builder = { workspace = true }
le-chad = { workspace = true }
