[project]
name = "le-chad"
version = "0.1.0"
description = "Developer standup and task tracker"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["le_chad"]

[project.scripts]
le-chad = "le_chad.cli:main"
